js/src/tests/test262/built-ins/Error/prototype/message/15.11.4.3-1.js
for
(
var
i
in
Error
.
prototype
)
{
assert
.
notSameValue
(
i
"
message
"
'
i
'
)
;
}
reportCompare
(
0
0
)
;
